apps/static/01-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
  namespace: static
  annotations:
    flux.weave.works/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: static
  template:
    metadata:
      labels:
        name: static
    spec:
      containers:
      - name: nginx 
        image: stillinbeta/static-files:1554588830
