apps/static/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: static
  name: static-service
spec:
  selector:
    name: static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
