apps/static/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: static
      hosts:
      - static.stillinbeta.com
  rules:
  - host: static.stillinbeta.com
    http:
      paths:
      - backend:
          serviceName: static-service
          servicePort: 80
